<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorBackground"
    android:id="@+id/main">
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="fill_parent"
        android:orientation="vertical"
    	android:gravity="center"
        android:background="@color/colorBackground"
    	android:layout_marginLeft="50px"
    	android:layout_marginRight="50px"
    	android:layout_marginBottom="30px">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imgLogo"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"/>

        <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/select"
            android:textColor="@color/colorPrimaryDark"
	        android:gravity="center"
	        android:textStyle="bold"
	        android:textSize="18dp"
	        android:layout_marginBottom="20sp"/>
        <Button
            android:id="@+id/butInfo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/phone_info"
            android:textSize="15sp"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:layout_marginBottom="5dp"/>
        <Button
            android:id="@+id/butSingle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/single_test"
            android:textSize="15sp"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:layout_marginBottom="5dp"/>
        <Button
            android:id="@+id/butFull"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/full_test"
            android:textSize="15sp"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>
