<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorBackground"
    android:gravity="center">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imgLogo"
        android:background="@drawable/icon"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author_name"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:gravity="center"
        android:textStyle="bold"/>


</LinearLayout>