<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <fragment
        android:id="@+id/mainFragment"
        android:name="phamhungan.com.phonetestv3.ui.fragment.NullFragment"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    </fragment>
    <LinearLayout
        android:id="@+id/lnBottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp">
        <Button
            android:id="@+id/butPass"
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/pass"
            android:textColor="#FFFFFF"
            android:background="@drawable/but_pass"/>
        <Button
            android:id="@+id/butSkip"
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/but_skip"/>
        <Button
            android:id="@+id/butFail"
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:layout_height="wrap_content"
            android:text="@string/fail"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/but_fail"/>
    </LinearLayout>

</RelativeLayout>