<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorBackground"
    android:gravity="center">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Android Audio Recording"
        android:textColor="@color/colorPrimary"
        android:id="@+id/txtMessage"
        android:textSize="18dp"
        android:gravity="center"/>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imgMicro"
        android:layout_below="@+id/txtMessage"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record"
        android:id="@+id/butRecord"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/imgMicro"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="59dp"
        android:background="@android:drawable/dialog_holo_light_frame" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:id="@+id/butStop"
        android:textColor="@color/colorPrimary"
        android:layout_alignTop="@+id/butRecord"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/dialog_holo_light_frame"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:id="@+id/butPlay"
        android:textColor="@color/colorPrimary"
        android:layout_alignTop="@+id/butStop"
        android:layout_alignRight="@+id/txtMessage"
        android:layout_alignEnd="@+id/txtMessage"
        android:background="@android:drawable/dialog_holo_light_frame" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imgRefresh"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/butStop"
        android:textColor="@color/colorPrimary"/>

</RelativeLayout>